# transitlens-data-pipeline

./: .gitignore  .pre-commit-config.yaml  261136679.csv  ARCHITECTURE.md  CODEX.md  CONTRIBUTING.md  HANDOFF.md  README.md  TASKS.md  download_tess_to_csv.py  interface.py  pyproject.toml  requirements.txt  transitlens-data-pipeline-PLAN.md
configs/: default.toml
datasets/: __init__.py  archive_adapter.py  build_dataset.py  build_real_evaluation_dataset.py  build_tess_sector_dataset.py  build_tess_training_manifest.py  data_card.md  gold_set.csv  label_mapping.yaml  metadata.json  process_tesscut_lightcurves.py  schema.md  validate_dataset.py
detection/: preprocessing.py
notebooks/: exploration.ipynb  synthetic_visualisation.ipynb
phase1/: README.md  __init__.py  archive_discovery.py  atomic_io.py  cadence.py  catalog_ingestion.py  checksums.py  cli.py  config.py  deduplication.py  downloader.py  dv_xml.py  final_verification.py  fits_parser.py  label_resolver.py  manifest.py  reporting.py  schemas.py  sector_selection.py  split_builder.py  supplementary_cohort.py  supplementary_discovery.py  validation.py
phase2/: README.md  __init__.py  acquisition.py  aperture_photometry.py  benchmark_builder.py  cli.py  config.py  evaluation.py  feature_materializer.py  gaia_cache.py  reporting.py  tpf_discovery.py  tpf_downloader.py  tpf_parser.py  validation.py
real_tess/: README.md  fits_parser.py  flux_normaliser.py  mast_loader.py  sector_downloader.py  sector_manifest.py  sector_processor.py  sector_screening.py  sector_selector.py  tesscut_downloader.py
scratch/: fix_manifest.py  generate_mock_dataset.py
scripts/: generate_synthetic_tess.py
synthetic/: config.yaml  generator.py  (+2 more)
(+268 files in other folders)
