[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "transitlens-data-pipeline"
version = "0.1.0"
description = "Astronomical light-curve acquisition and preprocessing service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "fastapi>=0.115",
    "lightkurve>=2.5",
    "loguru>=0.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.20",
    "pyarrow>=17.0",
    "PyWavelets>=1.6",
    "scipy>=1.13",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "black>=24.8",
    "httpx>=0.27",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
    "src/config",
    "src/exporters",
    "src/features",
    "src/fits",
    "src/logging_config",
    "src/mast",
    "src/preprocessing",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
    "integration: cross-module workflow tests without live network access",
    "performance: local processing performance acceptance tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
